--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   riverpod_generator: ^2.3.5
   build_runner: ^2.4.6
   flutter_screenutil: ^5.9.0
+  fluttertoast: ^8.2.2
+  firebase_auth: ^4.12.0
+  firebase_core: ^2.20.0
+  cloud_firestore: ^4.12.2
+  shared_preferences: ^2.2.2
+  lottie: ^2.7.0
+  riverpod_annotation: ^2.3.0
 
 dev_dependencies:
   flutter_test:
